added navigation on main page

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,8 @@
     <script src="scripts/common/artistName.component.js"></script>
     <script src="scripts/home/enter.component.js"></script>
     <script src="scripts/home/main.component.js"></script>
+    <script src="scripts/home/about.component.js"></script>
+
 
 
 
