add style and images for enter page

--- a/app/index.html
+++ b/app/index.html
@@ -40,15 +40,11 @@
     <script src="scripts/home/enter.component.js"></script>
     <script src="scripts/home/main.component.js"></script>
     <script src="scripts/home/about.component.js"></script>
+    <script src="scripts/common/carousel.component.js"></script>
 
 
-
-
-    <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
-    <!--
-    <link rel="canonical" href="http://www.example.com/">
-    -->
-
+    <!-- Your styles -->
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <artist-portfolio></artist-portfolio>
