style menu, added social icons

--- a/app/index.html
+++ b/app/index.html
@@ -37,13 +37,16 @@
     <script src="scripts/artistPortfolio.module.js"></script>
     <script src="scripts/artistPortfolio.component.js"></script>
     <script src="scripts/common/artistName.component.js"></script>
+    <script src="scripts/common/carousel.component.js"></script>
     <script src="scripts/home/enter.component.js"></script>
     <script src="scripts/home/main.component.js"></script>
+    <script src="scripts/home/news.component.js"></script>
+    <script src="scripts/home/works.component.js"></script>
     <script src="scripts/home/about.component.js"></script>
-    <script src="scripts/common/carousel.component.js"></script>
 
 
     <!-- Your styles -->
+    <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
