--- a/app/index.html
+++ b/app/index.html
@@ -31,30 +31,17 @@
     <!-- Color the status bar on mobile devices -->
     <meta name="theme-color" content="#2F3BA2">
 
-
     <!-- Your styles -->
-    <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/baguetteBox.min.css">
   </head>
   <body>
+    <base href="/">
     <artist-portfolio></artist-portfolio>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
-    <script src="https://npmcdn.com/@angular/router@0.2.0/angular1/angular_1_router.js"></script>
-    <base href="/">
-    <script src="scripts/vendor/baguetteBox.js"></script>
-    <script src="scripts/artistPortfolio.module.js"></script>
-    <script src="scripts/artistPortfolio.component.js"></script>
-    <script src="scripts/common/artistName.component.js"></script>
-    <script src="scripts/common/carousel.component.js"></script>
-    <script src="scripts/home/enter.component.js"></script>
-    <script src="scripts/home/main.component.js"></script>
-    <script src="scripts/home/news.component.js"></script>
-    <script src="scripts/home/works.component.js"></script>
-    <script src="scripts/home/about.component.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main.min.js"></script>
 
+    <!-- Fonts can be downloaded later -->
+    <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
